--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
   body{
   background-color:red;
-taxt-align:center;
+text-align:center;
 }
 h1{
   color:white;
@@ -15,5 +15,6 @@ h1{
   <body>
   <h1>welcome to my website</h1>
   <a href="https://www.unsplash.com" target="_blank">vist unsplash</a>
+    <p>kalaso dag linkga kor sawir walbo free</p>
   </body>
   </html>
