--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   body{
   background-color:red;
 text-align:center;
-   font-family,Arial sans-serif;
+   font-family: Arial, sans-serif;
 }
 h1{
   color:white;
