--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   background-color:red;
 text-align:center;
    font-family: Arial, sans-serif;
+    20px;
+    
 }
 h1{
   color:white;
@@ -14,7 +16,9 @@ h1{
 </style>
   </head>
   <body>
+    <header>
   <h1>welcome to my website</h1>
+    </header>
   <a href="https://www.unsplash.com" target="_blank">vist unsplash</a>
     <p>kalaso dag linkga kor sawir walbo free</p>
   </body>
